--- a/.env.example
+++ b/.env.example
@@ -21,10 +21,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
-DB_DATABASE=restaurant_booking
-DB_USERNAME=root
+DB_DATABASE=restaurant_db
+DB_USERNAME=
 DB_PASSWORD=
 
 SESSION_DRIVER=database
